[project]
name = "jupyter-tutorial-de"
version = "24.1.0"
authors = [
  { name="Veit Schiele", email="veit@cusy.io" },
]
description = "Schulungsmaterialen für den Aufbau und die Nutzung einer Forschungsinfrastruktur auf Basis von Jupyter Notebooks: https://cusy.io/de/seminare"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
docs = [
    "furo",
    "ipython",
    "ipywidgets",
    "matplotlib", # matplotlib is required for social cards
    "nbsphinx",
    "sphinx<8.2",
    "sphinx-inline-tabs",
    "sphinx-lint",
    "sphinx-notfound-page",
    "sphinx_copybutton",
    "sphinxcontrib-svg2pdfconverter",
    "sphinxext.opengraph"
]

dev = [
    "jupyter-tutorial-de[docs]",
    "pre-commit",
    "codespell",
    "vale",
]

[project.urls]
"Homepage" = "https://github.com/veit/jupyter-tutorial-de/"
"Bug Tracker" = "https://github.com/veit/jupyter-tutorial-de/issues"

[tool.setuptools]
packages = []

[tool.black]
line-length = 79

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true

known_first_party="jupyter-tutorial-de"
known_third_party=["Cython", "accounts_pb2", "accounts_pb2_grpc", "dataprep", "google", "grpc", "mpi4py", "numpy", "pandas", "pydantic", "pytest", "requests", "setuptools"]

[tool.codespell]
skip = "*.html, *.ipynb, *.rst, ./docs/_build/*, ./jupyter_tutorial_de.egg-info/*, ./styles/*"
