[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "hub"
version = "25.1.0"
description = "JupyterHub"
authors = [
  { name = "Veit Schiele", email = "veit@cusy.io" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "autopep8",
  "ipyparallel",
  "jupyter",
  "jupyter-contrib-nbextensions",
  "jupyter-latex-envs",
  "jupyterhub",
  "jupyterhub-systemdspawner",
  "jupyterlab",
  "nb2xls",
  "nbconvert",
  "yapf",
]
